Add .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,28 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
+# Dependencias
 /node_modules
 /.pnp
 .pnp.js
 
-# testing
-/coverage
-
-# production
+# Archivos de producción
 /build
 
-# misc
+# Archivos de sistema y editores
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Archivos de configuración de editores
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Archivos de entorno
+.env
